force-app/main/default/objects/ProjectedMargin__c/ProjectedMargin__c.object-meta.xml
<CustomObject>
    
    <label>Margem Projetada</label>
    <nameField>
        <displayFormat>Margem-{0000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margem Projetada</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>