force-app/main/default/objects/ProjectedMargin__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipName>Margem_Projetado</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>