force-app/main/default/objects/ProjectedMargin__c/fields/ExternalIdIndex__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdIndex__c</fullName>
    <formula>CASESAFEID(Crop__c)+'_'+CASESAFEID(SalesOrg__c)+'_'+CASESAFEID(Family__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExternalId</label>
    <type>Text</type>
</CustomField>