force-app/main/default/objects/ProjectedMargin__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipName>Margem_Projetado</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>