force-app/main/default/objects/ProjectedMargin__c/fields/RegistroDuplicado__c.field-meta.xml
<CustomField>
    <fullName>RegistroDuplicado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registro Duplicado?</label>
    <type>Checkbox</type>
</CustomField>