force-app/main/default/objects/ProjectedMargin__c/validationRules/ValidaRegistroDuplicado.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaRegistroDuplicado</fullName>
    <active>true</active>
    <errorConditionFormula>RegistroDuplicado__c = TRUE</errorConditionFormula>
    <errorMessage>Registro já existente no sistema.</errorMessage>
</ValidationRule>