force-app/main/default/objects/ProjectedMargin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Family__c</columns>
    <columns>SalesOrg__c</columns>
    <columns>Crop__c</columns>
    <columns>Margin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>