force-app/main/default/objects/ProjectedMargin__c/listViews/Margem.listView-meta.xml
<ListView>
    <fullName>Margem</fullName>
    <columns>Family__c</columns>
    <columns>SalesOrg__c</columns>
    <columns>Crop__c</columns>
    <columns>Margin__c</columns>
    <filterScope>Mine</filterScope>
    <label>Margem</label>
</ListView>